2006-10-14  Matthias Wimmer  <m@tthias.eu>

    * util/nsparser.cc: subclassing xmlpp::SaxParser to get a ns-aware parser
    * util/util2.h: same

2006-10-13  Matthias Wimmer  <m@tthias.eu>

    * clients.cc: fixing problem in SASL authentication

2006-10-12  Matthias Wimmer  <m@tthias.eu>

    * jadc2s.cc: Logging the version number on startup
    * util/config.cc: using libxml++ instead of xerces
    * util/util2.h: same

2006-10-11  Matthias Wimmer  <m@tthias.eu>

    * util/config.cc: new class to access configuration
    * util/pointer.tcc: new method points_to_NULL() for pointer class
    * util/jid.cc: new class to represent JabberIDs
    * util/str.cc: removing functions _j_strcpy() and zonestr()
    * util/pool.cc: removing this module completely
    * util/log.cc: output operator for std::string
    * util/util.h: reflecting the above changes
    * util/util2.h: same
    * mio/mio.cc: declaring sourceip argument of mio_listen as const
    * mio/mio.h: same
    * clients.cc: using new features from util/*.cc, using std::string
    * connect.cc: same
    * rate.cc: same
    * jadc2s.cc: same
    * conn.cc: same, and defining conn_st as a class
    * jadc2s.h: same

2006-10-04  Matthias Wimmer  <m@tthias.eu>

    * conn.cc: debug logging using std::clog and DBG() macro
    * clients.cc: same
    * connect.cc: same
    * jadc2s.cc: same
    * rate.cc: same
    * jadc2s.cc: do not call OpenSSL if context generation failed

2006-10-03  Matthias Wimmer  <m@tthias.eu>

    * jadc2s.h: defining c2s_st as a class and using xmppd::pointer for access
    * jadc2s.cc: same
    * conn.cc: same
    * clients.cc: same
    * connect.cc: same
    * rate.cc: same

2006-09-28  Matthias Wimmer  <m@tthias.eu>

    * conn.cc: putting logging code in namespace xmppd
    * jadc2s.cc: same
    * jadc2s.h: same
    * util/log.cc: same
    * util/util2.h: introducing managed pointers
    * util/pointer.tcc: same

2006-09-27  Matthias Wimmer  <m@tthias.eu>
