@@ -2,5 +2,5 @@ noinst_LTLIBRARIES = libutil.la
 
 include_HEADERS = util.h util2.h pointer.tcc
 
-libutil_la_SOURCES = config.cc jid.cc log.cc nad.cc nsparser.cc sha.cc str.cc
+libutil_la_SOURCES = config.cc jid.cc log.cc nad.cc nsparser.cc sha.cc str.cc xmlistream.cc
 libutil_la_LIBADD = @LDFLAGS@
